--- a/public/css/main.css
+++ b/public/css/main.css
@@ -327,7 +327,7 @@ div {
 }
 
 /* Hide buttons on touch devices/small screens */
-@media (max-width: 480px) and (hover: none) and (pointer: coarse) {
+@media (hover: none) and (pointer: coarse) {
   .nav-btn {
     display: none;
   }
